--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,59 +9,29 @@
     
    
     
-    <!-- Prime FACES -->
-	<context-param>
-		<param-name>primefaces.THEME</param-name>
-		<param-value>glass-x</param-value>
-	</context-param>
     <context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/applicationContext.xml</param-value>
 	</context-param>
     
-    
    <!-- The Bootstrap listener to start up and shut down Spring's root WebApplicationContext. It is registered to Servlet Container -->
    <listener><listener-class>org.springframework.web.context.ContextLoaderListener</listener-class></listener><listener>
   <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class></listener>
 
-	<context-param>
-		<param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
-		<param-value>true</param-value>
-	</context-param>
-	<context-param>
-		<param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
-		<param-value>true</param-value>
-	</context-param>
-	<context-param>
-		<param-name>javax.faces.PROJECT_STAGE</param-name>
-<!-- 		<param-value>Production</param-value> -->
-		<param-value>Development</param-value>
-	</context-param>
-	<context-param>
-		<param-name>javax.faces.PARTIAL_STATE_SAVING</param-name>
-		<param-value>false</param-value>
-	</context-param>
-
-
-
-   <!-- Welcome Page -->
-   <welcome-file-list>
-     <welcome-file>/home.xhtml</welcome-file>
-   </welcome-file-list>
-
-   <!-- JSF Servlet is defined to container -->
-   <servlet>
-     <servlet-name>Faces Servlet</servlet-name>
-     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-     <load-on-startup>1</load-on-startup>
-   </servlet>
-
-   <!-- Mapping with servlet and url for the http requests. -->
-   <servlet-mapping>
-     <servlet-name>Faces Servlet</servlet-name>
-     <url-pattern>*.xhtml</url-pattern>
-   </servlet-mapping>
-
-
+<!-- Processes application requests -->
+	<servlet>
+		<servlet-name>appServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/applicationContext.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>appServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 
 </web-app>
